<resources>
    <string name="app_name">BusOwner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="doesn_t_have_an_account_sign_up">Doesn\'t Have An Account? Sign Up</string>
    <string name="user_type">User Type</string>
    <string name="confirm_password">Confirm Password</string>

    <string-array name="user_types">
        <item >Passenger</item>
        <item>Driver</item>
    </string-array>
</resources>